<resources>
    <string name="app_name">Films</string>
    <string name="api_key">6a56f08dcd3c96db9bf09fde79d32bcc</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="go_back">Go Back</string>
    <string name="poster">Poster</string>
    <string name="share">Share</string>
    <string name="aryan">Aryan</string>
    <string name="chetan">Chetan</string>
    <string name="latest_movies">Latest Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="filmypedia">Filmypedia</string>
    <string name="top_rated">Top Rated</string>
    <string name="browse_similar">View Similar</string>
    <string name="search_movie">Search Movie</string>
    <string name="search">Search</string>
    <string name="find_movies">Find Movies</string>
    <string name="movie_image">Movie Image</string>
    <string name="actor_s_photo">Actor\'s Photo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies:</string>
    <string name="cast">Cast:</string>
    <string name="voice_search">Voice Search</string>
    <string name="favourites">Favourites</string>
    <string name="search_movies">Search Movies</string>
    <string name="delete">Delete</string>
    <string name="no_favourites_added">No Favourites Added</string>
    <string name="title_activity_maps">Theaters Near You</string>
    <string name="find_theaters">Find Theaters</string>
    <string name="reviews">Reviews</string>
    <string name="home">Home</string>
    <string name="added">Added</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="youtube">Youtube</string>
    <string name="trending">Trending</string>
    <string name="hollywood">Hollywood</string>
    <string name="change_theme">Change Theme</string>
    <string name="theaters_nearby">Theaters Nearby</string>
</resources>