<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/search_item"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="always"
        android:title="@string/search_movies"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item android:id="@+id/voice_search"
        android:icon="@drawable/ic_baseline_mic_24"
        app:showAsAction="always"
        android:title="@string/voice_search" />

    <item android:id="@+id/favourites"
        android:icon="@drawable/ic_baseline_star_24"
        app:showAsAction="always"
        android:title="@string/favourites" />
    <item android:id="@+id/nearby_movie"
        android:icon="@drawable/ic_baseline_map_24"
        app:showAsAction="ifRoom"
        android:title="Theaters Nearby"/>

</menu>